LegacyReportPrinter.java